# tests

./: README.md
project_department/: README.rst
project_department/views/: project.xml
project_key/: README.rst
project_key/models/: project_project.py  project_task.py
project_key/tests/: test_task.py
project_milestone_status/: README.rst
project_milestone_status/models/: project.py
project_milestone_status/views/: project_views.xml
project_parent/: README.rst
project_parent/i18n/: pt.po
project_parent/models/: project_project.py
project_parent/views/: project_parent_views.xml
project_parent_task_filter/: README.rst
project_pivot/: README.rst
project_purchase_link/: README.rst
project_role/: README.rst
project_role/i18n/: it.po
project_scrum/: README.rst
project_scrum/views/: project_task_views.xml
project_sequence/: README.rst
project_sequence/views/: project_project.xml
project_stage_last_update_date/: README.rst
project_tag_hierarchy/: README.rst
project_tag_multicompany/: README.rst
project_tag_security/: README.rst
project_tag_security/readme/: USAGE.md
project_task_add_very_high/: README.rst  __manifest__.py
project_task_code/: README.rst
project_task_code/models/: project_task.py
project_task_code/tests/: test_project_task_code.py
project_task_default_stage/: README.rst
project_task_name_with_id/: README.rst
project_task_name_with_id/models/: project_task.py
project_task_name_with_id/tests/: test_project_task_id.py
project_task_note/: README.rst
project_task_parent_completion_blocking/: README.rst  __manifest__.py
project_task_parent_completion_blocking/i18n/: it.po  project_task_parent_completion_blocking.pot
project_task_parent_completion_blocking/readme/: DESCRIPTION.md
project_task_parent_due_auto/: README.rst
project_task_pull_request/: README.rst
project_task_stage_mgmt/: README.rst
project_task_stage_state/: README.rst
project_task_stock/: README.rst
project_task_stock_product_set/: README.rst
project_template/: README.rst
project_timeline/: README.rst
project_timeline_hr_timesheet/: README.rst
project_timesheet_time_control/: README.rst  __manifest__.py
project_type/: README.rst
project_version/: README.rst
setup/_metapackage/: pyproject.toml
(+39 files in other folders)
