[project]
name = "odoo-addons-oca-project"
version = "18.0.20250209.0"
dependencies = [
    "odoo-addon-project_role==18.0.*",
    "odoo-addon-project_sequence==18.0.*",
    "odoo-addon-project_task_default_stage==18.0.*",
    "odoo-addon-project_type==18.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
