[project]
name = "odoo-addons-oca-project"
version = "18.0.20250505.0"
dependencies = [
    "odoo-addon-project_parent==18.0.*",
    "odoo-addon-project_pivot==18.0.*",
    "odoo-addon-project_role==18.0.*",
    "odoo-addon-project_sequence==18.0.*",
    "odoo-addon-project_stage_last_update_date==18.0.*",
    "odoo-addon-project_tag_hierarchy==18.0.*",
    "odoo-addon-project_tag_multicompany==18.0.*",
    "odoo-addon-project_tag_security==18.0.*",
    "odoo-addon-project_task_add_very_high==18.0.*",
    "odoo-addon-project_task_default_stage==18.0.*",
    "odoo-addon-project_task_note==18.0.*",
    "odoo-addon-project_task_parent_completion_blocking==18.0.*",
    "odoo-addon-project_task_parent_due_auto==18.0.*",
    "odoo-addon-project_task_stage_state==18.0.*",
    "odoo-addon-project_task_stock==18.0.*",
    "odoo-addon-project_timesheet_time_control==18.0.*",
    "odoo-addon-project_type==18.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
